Improved user validation processes and developed a comprehensive Product class with relevant attributes